--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,19 +1,14 @@
 <% provide(:title, 'Contact') %>
 
 <div class="container mainContainer">
-	<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 jumbotron text-center">
-		<h4>For more information about Next Level Distance Running please email Ronnie Carda at:
-			<%= mail_to('Ronnie@cardarunning.com') %>
-		</h4>
-	</div>
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center">
-			<%= image_tag("tortoise_hare.PNG") %>
-		</div>
+		<div class="jumbotron" id="contactDiv">
+			<h4 class="col-xs-12 col-sm-12 col-md-9 col-lg-9 text-center">For more information about 
+				Next Level Distance Running please email Ronnie Carda at:
+				<%= mail_to('Ronnie@cardarunning.com') %>
+			</h4>
+			<%= image_tag("tortoise_hare.PNG", :class => "col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center" ) %>
+		</div>		
 	</div>
 </div>
 
-
-
-
-		
