--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,15 @@
 <div class="container padding-10-px" id="footerDiv">
 	<div class="row-fluid jumbotron">
 		<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 text-center padding-10-px">
-			<%= link_to(image_tag("FB_FindUsOnFacebook-100.png"), "https://www.facebook.com/cardatraining", 
+			<%= link_to(image_tag("FB_FindUsOnFacebook-100.png"), 
+				"https://www.facebook.com/cardatraining", 
 				:title =>"Next Level Distance Running on Facebook")  %>
 		</div>
 		
-		<div class="col-xs-12 col-xs-12 col-md-8 col-lg-8 text-center padding-10-px">
+		<div class="col-xs-12 col-xs-12 col-md-8 col-lg-8 text-center">
 			<h5>&#169; All Rights Reserved by Ronnie Carda<br />
-				Website Designed by Dan Yachcik</h5>	
+				Website Designed by Dan Yachcik
+			</h5>	
 		</div>
 		
 		<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 text-center padding-10-px">
